--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -31,6 +31,12 @@ table.docutils td {
     word-wrap: break-word;
 }
 
+/* https://github.com/readthedocs/sphinx_rtd_theme/issues/1505#issuecomment-2258832864*/
+
+.wy-table-responsive table td, .wy-table-responsive table th {
+    white-space: normal;
+}
+
 /* Target the Sphinx list-table class and alternate row colors */
 table.docutils.list-table tr:nth-child(odd) {
     background-color: #f9f9f9; /* Light grey for odd rows */
